--- a/src/pages/FeaturedWork/FeaturedWork.module.css
+++ b/src/pages/FeaturedWork/FeaturedWork.module.css
@@ -19,6 +19,7 @@
 .mobilePlayerOpened {
   grid-template-rows: min-content min-content;
   height: auto;
+  flex-shrink: 0;
 }
 
 @media (min-width: 380px) {
