--- a/src/pages/FeaturedWork/Sections/Projects/Projects.module.css
+++ b/src/pages/FeaturedWork/Sections/Projects/Projects.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   flex-grow: 1;
   position: relative;
-  overflow-y: scroll;
 }
 
 @media (min-width: 1280px) {
